feat: Added double language support to curriculum

--- a/cv_pt/cv_pt.tex
+++ b/cv_pt/cv_pt.tex
@@ -1,5 +1,5 @@
 % cv de Rainan Miranda de Jesus
-%Email : Jesus.rainan@gmail.com
+%Email : rainan.jesus@pm.me
 
 \documentclass[margin,line]{res}
 \usepackage[utf8]{inputenc}
@@ -36,7 +36,6 @@
 
 \begin{document}
 
-\includegraphics[scale=1.2]{profile.jpg}
 \name{Rainan Miranda de Jesus \vspace{0.2cm} \vspace*{.1in}}
 \vspace{0.2cm}
 \begin{resume}
@@ -48,7 +47,7 @@ Av. Oeste, QD 19 LT 24 & {\it Telefone:}  (71) 98691-0699 \\
 Camaçari, BA            & {\it E-mail:}  \href{mailto:rainan.jesus@pm.me}{rainan.jesus@pm.me}\\
 Brasil                      & {\it }\\
 {\it GitHub:}  & {\it LinkedIn:} \\
-\href{https://github.com/rainanDeveloper}{rainanDeveloper} & \href{https://www.linkedin.com/in/rainan-miranda-de-jesus-508a43153/}{Rainan Miranda de Jesus}
+\href{https://github.com/rainanDeveloper}{https://github.com/rainanDeveloper} & \href{https://www.linkedin.com/in/rainan-miranda-de-jesus-508a43153/}{https://www.linkedin.com/in/rainan-miranda-de-jesus-508a43153/}
 \end{tabular}
 \vspace{0.2cm}
 \section{Educação}
@@ -56,30 +55,38 @@ Brasil                      & {\it }\\
 
 \item Curso Técnico em Informática no IFBA Campus Camaçari, término em junho de 2018.
 \end{list2}
-\vspace{0.2cm}
-\section{Formação Complementar}
+\section{Projetos Pessoais}
 \begin{list2}
-\item Minicurso de pre-cálculo
-\end{list2}
-\vspace{0.2cm}
-\section{Conquistas}
-\begin{list2}
-\item Criação do site de Graduação em computação no IFBA Campus Camaçari
-\item Desenvolvimento de aplicação RESTFULL de loja virtual clarion pedido
-\end{list2}
-\vspace{1cm}
-\section{Participação em Conferências}
-\begin{list2}
-\item Ministrou o minicurso "Programando em PHP", em abril de 2018.
+\item Mercury App (https://github.com/rainanDeveloper/MercuryApp)
+
+    MVP de envio de mensagens com criptografia assimétrica e implementação de diffie-hellman.
+\item Bluetools (https://github.com/rainanDeveloper/bluetools-v2)
+
+    MVP de um sistema de gerenciamento de empresas (ERP) mínimo.
+\item Learnsky (https://github.com/rainanDeveloper/learnsky)
+
+    Projeto simples de exemplo de QUIZ sobre conhecimento em astronomia (nome de astros)
 \end{list2}
 \vspace{0.2cm}
 \section{Experiência}
 \begin{list2}
-\item Estagiário na IPEM (Inovações Pedagógicas Educação maior), onde era responsável por social media, edição de vídeos, manutenção do site e da rede de computadores. Duração: meses.
-
 \item Estagiário no IFBA Campus Camaçari, onde foi responsável pela criação do site da Graduação em Computação. Duração: meses.
 
-\item Desenvolvedor Júnior FullStack na Clariontec Sistemas - Contratação CLT. Início: 12/2019, até o presente momento.
+    Responsável pelo desenvolvimento do site de graduação em computação, que foi desenvolvido em PHP, com HTML, CSS e Javascript.
+
+\item Desenvolvedor Júnior FullStack na Clariontec Sistemas - Contratação CLT. Duração: 1 ano e 11 meses.
+
+    Responsável pelo desenvolvimento de diversas aplicações (backend, frontend, desktop, etc). As aplicações desktop utilizavam uma ferramenta de low code chamada Windev.
+
+    Tecnologias relevantes utilizadas: PHP, HTML, CSS, Javascript, NodeJS, MySQL, C\#, .NET.
+
+    Aprendeu muito sobre SQL, dado que boa parte das regras de negócio de diversas aplicações ficavam no banco de dados(geralmente MySQL), e muito raramente eram utilizados ORM`s.
+
+\item Desenvolvedor Júnior Backend na Blockhub Tecnologia - Contratação PJ. Início: 11/2021, até o presente momento.
+
+    Responsável pelo desenvolvimento de diversas API's.
+
+    Tecnologias utilizadas: NodeJS, MongoDB, Typescript, NestJS.
 \end{list2}
 \vspace{0.2cm}
 \section{Idiomas}
@@ -89,11 +96,15 @@ Brasil                      & {\it }\\
 \vspace{0.2cm}
 \section{Habilidades Computacionais}
 \begin{list2}
-\item Linguagens: C, PHP, Python, Javascript ES6, C\#, Java, \LaTeX.
-\item Frameworks: ReactJS, React Native, NextJS
-\item Tecnologias: NodeJS
-\item Amplo conhecimento de Redes, adquiridas no curso técnico.
-\item Sistemas Operacionais: Linux, Windows.
+\item Habilidades Frontend: HTML 5, CSS3, ReactJS (Framework js), Javascript ES6
+
+\item Linguagens: C, .NET, Javascript (NodeJS), Typescript, C\#
+
+\item Frameworks: Express, NestJS, TypeORM, Sequelize
+
+\item Tecnologias: NodeJS, MySQL, Redis, Postgres (básico), MongoDB (básico)
+
+\item Habilidades de DevOps: Docker, Linux, Nginx
 \end{list2}
 \end{resume}
 \end{document}
