--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -74,19 +74,32 @@ Brasil                      & {\it }\\
 
     Responsible for the development of the undergraduate computing site, which was developed in PHP, with HTML, CSS and Javascript.
 
-\item FullStack Junior Developer at Clariontec Sistemas - CLT Hiring. Duration: 1 year and 11 months.
+\item Intern at Clariontec Sistemas. Duration: 1 year and 6 months
 
-    Responsible for the development of several applications (backend, frontend, desktop, etc). Desktop applications used a low code tool called Windev.
+	Responsible for developing several internal tools on the company.
+	
+	Relevant technologies used: PHP, MySQL
+
+\item FullStack Entry-level Developer at Clariontec Sistemas - CLT Hiring. Duration: 1 year and 11 months.
+
+    Responsible for the development of several applications (backend, frontend, desktop, etc). Developed Desktop applications using a low code tool called Windev.
 
     Relevant technologies used: PHP, HTML, CSS, Javascript, NodeJS, MySQL, C\#, .NET.
 
-    Had learned a lot about SQL, given that much of the business rules of various applications were in the database (usually MySQL), and very rarely were used ORM's.
+    Had learned a lot about SQL, given that much of the business rules of various applications were in the database (usually MySQL), and was very rare the use of ORM's.
 
-\item Junior Backend Developer at Blockhub Tecnologia - PJ Hiring. Start: 11/2021, so far present.
+\item Entry-level Backend Developer at Blockhub Tecnologia - PJ Hiring. Duration: 1 year
 
     Responsible for the development of several API's.
 
     Technologies used: NodeJS, MongoDB, Typescript, NestJS.
+
+\item Mid-Level Backend developer at Foursys, on Bradesco Bank's team. Start: 12/2022, until now
+
+	Responsible for developing the BFF´s (Backend for frontend api's) of the main app of Bradesco using nodejs, typescript and axios.
+	
+	Technologies used: Docker, Nodejs, Typescript, Axios
+
 \end{list2}
 \vspace{0.2cm}
 \section{Idioms}
@@ -102,7 +115,7 @@ Brasil                      & {\it }\\
 
 \item Frameworks: Express, NestJS, TypeORM, Sequelize
 
-\item Technologies: NodeJS, MySQL, Redis, Postgres (básico), MongoDB (básico)
+\item Technologies: NodeJS, MySQL, Redis, Postgres (basic knowledge), MongoDB (basic knowledge)
 
 \item DevOps skills: Docker, Linux, Nginx
 \end{list2}
