--- a/cv_pt/cv_pt.tex
+++ b/cv_pt/cv_pt.tex
@@ -47,7 +47,7 @@ Av. Oeste, QD 19 LT 24 & {\it Telefone:}  (71) 98691-0699 \\
 Camaçari, BA            & {\it E-mail:}  \href{mailto:rainan.jesus@pm.me}{rainan.jesus@pm.me}\\
 Brasil                      & {\it }\\
 {\it GitHub:}  & {\it LinkedIn:} \\
-\href{https://github.com/rainanDeveloper}{https://github.com/rainanDeveloper} & \href{https://www.linkedin.com/in/rainan-miranda-de-jesus-508a43153/}{https://www.linkedin.com/in/rainan-miranda-de-jesus-508a43153/}
+\href{https://github.com/rainanDeveloper}{https://github.com/rainanDeveloper} & \href{https://www.linkedin.com/in/rainanmjesus/}{https://www.linkedin.com/in/rainanmjesus/}
 \end{tabular}
 \vspace{0.2cm}
 \section{Educação}
@@ -82,16 +82,22 @@ Brasil                      & {\it }\\
 
     Aprendeu muito sobre SQL, dado que boa parte das regras de negócio de diversas aplicações ficavam no banco de dados(geralmente MySQL), e muito raramente eram utilizados ORM`s.
 
-\item Desenvolvedor Júnior Backend na Blockhub Tecnologia - Contratação PJ. Início: 11/2021, até o presente momento.
+\item Desenvolvedor Júnior Backend na Blockhub Tecnologia - Contratação PJ. Duração: 1 ano
 
     Responsável pelo desenvolvimento de diversas API's.
 
     Tecnologias utilizadas: NodeJS, MongoDB, Typescript, NestJS.
+
+\item Desenvolvedor Pleno na Foursys, no time do Banco Bradesco. Início: 12/2022, até o presente momento
+
+	Responsável pelo desenvolvimento dos BFF's (Backend for frontend) em Node.js.
+	
+	Tecnologias utilizadas: NodeJS, Docker, Typescript, Axios
 \end{list2}
 \vspace{0.2cm}
 \section{Idiomas}
 \begin{list2}
-\item Inglês - Compreende Bem, Fala Razoavelmente, Lê Bem, Escreve Bem.
+\item Inglês - Compreende Bem, Fala Razoavelmente Bem, Lê Bem, Escreve Bem.
 \end{list2}
 \vspace{0.2cm}
 \section{Habilidades Computacionais}
